<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine MF</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_menu">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="pref_title_edit_location">Edit Location</string>
    <string name="pref_location_default">94043</string>
    <string name="pref_location_key">Location</string>
    <string name="pref_units_key">Units</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="units_title">Temperature Units</string>
    <string name="location_on_map">Location on a Map</string>
    <string name="share_menu_item">Share</string>
    <string name="share_message">%s #SunshineApp</string>
    <string name="cd_weather_icon">Weather icon</string>
    <string name="sync_account_type">com.dataart.vyakunin.udacitystudyproject</string>
    <string name="content_authority">com.dataart.vyakunin.udacitystudyproject</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
<string name="format_full_friendly_date">
    <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
</string>
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_sync">Synchronization</string>
</resources>
